feat: add styles for dock icons with specific image sources

--- a/desktop-portfolio/src/assets/css/components.css
+++ b/desktop-portfolio/src/assets/css/components.css
@@ -385,6 +385,13 @@
   block-size  : 42px;
 }
 
+.dock-icon-img[src*="x.svg"],
+.dock-icon-img[src*="linkedin"],
+.dock-icon-img[src*="github"] {
+  inline-size : 42px;
+  block-size  : 42px;
+}
+
 .desktop-icon-label {
   font-size       : var(--text-xs);
   font-weight     : 600;
